  * Print time remaining in XhXXmXXs format, rather than XXXXs.
  * Use termcap for clearing progress lines, fixes problems with chars getting left at the end.
  * Use 64bit int for total bytes/lines if available.  Fixes negative/weird time left displays for large queues. 
  * Make timeout a config option.
  * Add manpage for ngetlite.
  * No longer attempt to set user/group in make install.
  
2001-08-02 - v0.14:
  * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
  * Remove autoconf AC_C_CONST, its only for C progs and breaks g++.
  * Fixed east/west of GMT timezone discrepancy if timezone var not found by configure.
  * Add support for ISO8601 date format and some minor fixes to current date parsing.
  * -T now prints date in ISO8601 format, rather than seconds since the epoch. 
  * -p and -P can now be specified multiple times without requiring a -G between each. (eg. now you can -G somegroup -p /dir1 -r somefiles -p /dir2 -r someotherstuff)
  * Remove quotes from quoted filenames.
  * Added FAQ.
  * Fixed some leaks. (mostly unnoticable unless you did lots of -[Gg] on the same instance.)
  * Fixed ngetlite building on platforms without vasprintf. (reported by Michael J. Paluka)
  * Added -d [mM] flags. (Andres Heinloo)
  * Added -[MU] options. (Andres Heinloo, me)
  * nget+uulib tarball includes new uulib version 0.5.15

2001-02-08 - v0.13.2:
  * Add trailing / onto NGETHOME var so you don't need to.
  * Fix compile on Redhat 7.0.  (#defined PROTOTYPES before including uudeview)
  * Added usegz .ngetrc option. (global and per-group)
  * Added exit code setting on non-fatal errors and printout of number of errors. (lemme know if you find some other errors that you think should be reported this way.)
  * ngetlite uses ngetlite.<pid> (instead of .tmp), allowing multiple ngetlite processes to run in the same dir.
  * ngetlite checks for bytes +-3 like nget.