@@ -31,7 +31,7 @@ that match.
 .IP "-R/--expretrieve expression"
 Like -r, but matches expression instead of merely a regexp.  Expression is a
 postfix expression that can contain the keywords
-subject, author, lines, bytes, have, req, date.  Note that the --limit
+subject, author, lines, bytes, have, req, date, messageid(or mid).  Note that the --limit
 argument does not affect the option, if you want to limit based on number
 of lines, add it as part of the expression.
 .IP "-@/--list LISTFILE"
