@@ -6,6 +6,7 @@
   * Make timeout a config option.
   * Add manpage for ngetlite.
   * No longer attempt to set user/group in make install.
+  * Add messageid (mid) keyword to -R expressions.
   
 2001-08-02 - v0.14:
   * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
